@@ -1,3 +1,5 @@
+	* Added 'roulette' command to Fun plugin.
+	
 	* Added a Channel.lobotomies command to list the channels in which
 	the bot is lobotomized.
 	
